Update dependencies and bump to 0.8.2